Use highest deflate compression for JARs.